--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Tittle</title>
+    <title>キューブ壊してね</title>
     <link rel="icon" type="image/x-icon" href="img/haku.png" />
     <link rel="stylesheet" href="css/styles.css">
 </head>
@@ -24,10 +24,9 @@
 <!-- Menu System -->
 <div class="menus">
 	<div class="menu menu--main">
-		<h1>MENJA</h1>
+		<h1>キューブ壊し</h1>
 		<button type="button" class="play-normal-btn">PLAY GAME</button>
 		<button type="button" class="play-casual-btn">CASUAL MODE</button>
-		<div class="credits">An 8kB game by <a href="https://cmiller.tech">Caleb Miller</a></div>
 	</div>
 	<div class="menu menu--pause">
 		<h1>Paused</h1>
