--- a/index.html
+++ b/index.html
@@ -25,21 +25,21 @@
 <div class="menus">
 	<div class="menu menu--main">
 		<h1>キューブ壊し</h1>
-		<button type="button" class="play-normal-btn">PLAY GAME</button>
-		<button type="button" class="play-casual-btn">CASUAL MODE</button>
+		<button type="button" class="play-normal-btn">もう一回やるよ</button>
+		<button type="button" class="play-casual-btn">別モード</button>
 	</div>
 	<div class="menu menu--pause">
-		<h1>Paused</h1>
-		<button type="button" class="resume-btn">RESUME GAME</button>
-		<button type="button" class="menu-btn--pause">MAIN MENU</button>
+		<h1>ポーズ中</h1>
+		<button type="button" class="resume-btn">続ける</button>
+		<button type="button" class="menu-btn--pause">メインメニュー</button>
 	</div>
 	<div class="menu menu--score">
-		<h1>Game Over</h1>
+		<h1>敗北者</h1>
 		<h2>Your Score:</h2>
 		<div class="final-score-lbl"></div>
 		<div class="high-score-lbl"></div>
-		<button type="button" class="play-again-btn">PLAY AGAIN</button>
-		<button type="button" class="menu-btn--score">MAIN MENU</button>
+		<button type="button" class="play-again-btn">もう一回</button>
+		<button type="button" class="menu-btn--score">メインメニュー</button>
 	</div>
 </div>
 
