--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 <div class="menus">
 	<div class="menu menu--main">
 		<h1>キューブ壊し</h1>
-		<button type="button" class="play-normal-btn">もう一回</button>
+		<button type="button" class="play-normal-btn">遊ぶ</button>
 		<button type="button" class="play-casual-btn">別モード</button>
 	</div>
 	<div class="menu menu--pause">
